# linguasteg

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/: .release-please-manifest.json  pull_request_template.md  release-please-config.json
.github/workflows/: ci-main-gate.yml  codeql.yml  publish-crates.yml  release-binaries.yml  release-drill.yml  release-please.yml
docs/: go-no-go-checklist.md  msrv-policy.md  pre-release-checklist.md  release-governance.md
linguasteg/: CHANGELOG.md  Cargo.toml  README.md
linguasteg-cli/: CHANGELOG.md  Cargo.toml  README.md
linguasteg-cli/assets/: data_sources.json
linguasteg-cli/assets/datasets/: de-default.json  en-default.json  fa-default.json  it-default.json
linguasteg-cli/linguasteg-cli/: CHANGELOG.md
linguasteg-cli/src/: main.rs
linguasteg-cli/src/app/: analysis.rs  args.rs  commands.rs  data.rs  dataset.rs  formatters.rs  language.rs  mod.rs  runtime.rs  symbol_mix.rs  trace.rs  trace_contract.rs  types.rs
linguasteg-cli/tests/: cli_integration.rs  golden_outputs.rs
linguasteg-cli/tests/fixtures/: analyze_hello_en_json.out  analyze_non_contiguous_json.out  analyze_salam_json.out  catalog_en_json.out  catalog_json.out  decode_hello_en_json.out  decode_non_contiguous_stderr.out  decode_salam_json.out  encode_hello_en_text.out  encode_salam_donya_123_json.out  encode_salam_json.out  encode_salam_text.out  encode_whitespace_json.out  profiles_json.out  schemas_en_json.out  schemas_json.out  templates_json.out  trace_salam_non_contiguous.input  validate_non_contiguous_stderr.out  validate_non_contiguous_stdout.out  validate_salam_json.out
linguasteg-core/: CHANGELOG.md  Cargo.toml  README.md
linguasteg-core/linguasteg-core/: CHANGELOG.md
linguasteg-core/src/: catalog.rs  crypto.rs  error.rs  gateway.rs  grammar.rs  ids.rs  lib.rs  orchestration.rs  pipeline.rs  registry.rs  style.rs  symbolic.rs  validation.rs
linguasteg-eval/: CHANGELOG.md  Cargo.toml  README.md
linguasteg-eval/linguasteg-eval/: CHANGELOG.md
linguasteg-eval/src/: lib.rs
linguasteg-models/: CHANGELOG.md  Cargo.toml  README.md
linguasteg-models/linguasteg-models/: CHANGELOG.md
linguasteg-models/src/: de.rs  en.rs  fa.rs  gateway.rs  it.rs  lib.rs
linguasteg/linguasteg/: CHANGELOG.md
linguasteg/src/: lib.rs
scripts/: install.sh
scripts/ci/: go_no_go_check.sh  pre_release_checklist.sh  publish_release.sh  release_drill.sh  smoke_e2e.sh  verify_repo_hygiene.sh
scripts/release/: render_homebrew_formula.sh  update_homebrew_tap.sh
xtask/: Cargo.toml
xtask/src/: main.rs
