[workspace]
members = [
    "linguasteg",
    "linguasteg-core",
    "linguasteg-cli",
    "linguasteg-models",
    "linguasteg-eval",
    "xtask"
]
default-members = ["linguasteg", "linguasteg-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/madebydaniz/linguasteg.git"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
