[package]
name = "linguasteg-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for LinguaSteg"

[[bin]]
name = "lsteg"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
linguasteg-core.workspace = true
linguasteg-models.workspace = true
