[package]
name = "linguasteg-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for LinguaSteg"

[[bin]]
name = "lsteg"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
linguasteg-core.workspace = true
linguasteg-models.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
ureq = { version = "2.12.1", default-features = true }
