[package]
name = "linguasteg-cli"
version = "0.2.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for LinguaSteg"
readme = "README.md"

[[bin]]
name = "lsteg"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
linguasteg-core = { path = "../linguasteg-core", version = "0.2.2" }
linguasteg-models = { path = "../linguasteg-models", version = "0.2.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
ureq = { version = "2.12.1", default-features = true }
