[package]
name = "linguasteg-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain contracts and pipeline abstractions for LinguaSteg"
readme = "README.md"

[lints]
workspace = true

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
getrandom = "0.2.15"
