[package]
name = "linguasteg-models"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Model adapters and provider integrations for LinguaSteg"
readme = "README.md"

[lints]
workspace = true

[dependencies]
linguasteg-core = { path = "../linguasteg-core", version = "0.2.1" }
