[package]
name = "linguasteg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Public facade crate for the LinguaSteg workspace"

[lints]
workspace = true

[dependencies]
linguasteg-core.workspace = true
linguasteg-models.workspace = true
