[package]
name = "linguasteg"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Public facade crate for the LinguaSteg workspace"

[lints]
workspace = true

[dependencies]
linguasteg-core = { path = "../linguasteg-core", version = "0.1.0" }
linguasteg-models = { path = "../linguasteg-models", version = "0.1.0" }
