[package]
name = "linguasteg"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Public facade crate for the LinguaSteg workspace"
readme = "README.md"

[lints]
workspace = true

[dependencies]
linguasteg-core = { path = "../linguasteg-core", version = "0.2.1" }
linguasteg-models = { path = "../linguasteg-models", version = "0.2.1" }
